--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   justify-content: center;
 }
 
-label {
+.label {
   display: block;
   margin-top: 1rem;
   margin-bottom: 10px;
@@ -27,6 +27,9 @@ label {
   border-radius: 3px;
   color: rgb(100, 97, 89);
   font-size: 1rem;
+}
+select {
+  margin-top: 1rem;
 }
 
 option {
@@ -47,4 +50,9 @@ tr:nth-child(even) {
 tbody {
   border-bottom: 2px solid black;
   border-top: 2px solid black;
+}
+
+.table-container {
+  max-width: 60%;
+  margin: auto;
 }
